--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,11 @@
 			"request": "launch",
 			"preLaunchTask": "build",
 			// If you have changed target frameworks, make sure to update the program path.
-			"program": "${workspaceFolder}/bin/Debug/net6.0/Etapa6.dll",
+			"program": "${workspaceFolder}/01.fundamentos_dotnet/etapa11/etapa11/bin/Debug/net6.0/etapa11.dll",
 			"args": [],
-			"cwd": "${workspaceFolder}",
+			"cwd": "${workspaceFolder}/01.fundamentos_dotnet/etapa11/etapa11",
 			// For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-			"console": "integratedTerminal",
+			"console": "internalConsole",
 			"stopAtEntry": false
 		},
 		{
